--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -1,6 +1,6 @@
-
 <!doctype html>
 <html lang="en-US">
+
 <head>
 
 	<!-- Meta -->
@@ -11,10 +11,12 @@
 	<meta name="author" content="beshleyua" />
 
 	<!-- Title -->
-	<title>erikopinaldo - software developer</title>
+	<title>Cvio - Resume/CV Template</title>
 
 	<!-- Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic" rel="stylesheet">
+	<link
+		href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic"
+		rel="stylesheet">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/basic.css" />
@@ -39,7 +41,7 @@
 	<link rel="stylesheet" href="css/theme-colors/yellow.css" />
 	<link rel="stylesheet" href="css/theme-colors/yellow_light.css" />
 	-->
-		
+
 	<!--[if lt IE 9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -49,7 +51,7 @@
 
 </head>
 
-<body class="home-creative">
+<body class="home">
 
 	<!-- Preloader -->
 	<div class="preloader">
@@ -62,13 +64,13 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- Container -->
 	<div class="container">
 
 		<!-- Cursor -->
 		<div class="cursor-follower"></div>
-	
+
 		<!-- Header -->
 		<header class="header">
 			<div class="head-top">
@@ -79,24 +81,27 @@
 				<!-- logo -->
 				<div class="logo hover-masks-logo">
 					<a href="#">
-						<span class="mask-lnk">erik<strong>opinaldo</strong></span>
+						<span class="mask-lnk">erik <strong>opinaldo</strong></span>
 						<span class="mask-lnk mask-lnk-hover">Download <strong>CV</strong></span>
 					</a>
 				</div>
-				
-				<!-- top menu -->						
+
+				<!-- top menu -->
 				<div class="top-menu hover-masks">
-					<div class="top-menu-nav">	
+					<div class="top-menu-nav">
 						<div class="menu-topmenu-container">
 							<ul class="menu">
-								<li class="menu-item menu-item-has-children">
-									<a href="contacts.html">Contact</a>
-									<ul class="sub-menu">
-										<li class="menu-item"><a href="contacts.html">Contact Default</a></li>
-										<li class="menu-item"><a href="contacts_map.html">Contact Map</a></li>
-										<li class="menu-item"><a href="contacts_image.html">Contact Image</a></li>
-										<li class="menu-item"><a href="contacts_creative.html">Contact Creative</a></li>
-									</ul>
+								<li class="menu-item current-menu-item">
+									<a href="#section-started">Home</a>
+								</li>
+								<li class="menu-item">
+									<a href="#section-about">Resume</a>
+								</li>
+								<li class="menu-item">
+									<a href="#section-portfolio">Works</a>
+								</li>
+								<li class="menu-item">
+									<a href="#section-contacts">Contact</a>
 								</li>
 							</ul>
 						</div>
@@ -105,15 +110,15 @@
 
 			</div>
 		</header>
-		
+
 		<!-- Wrapper -->
-		<div class="wrapper">	
+		<div class="wrapper">
 
 			<!-- Section Started -->
-			<div class="section started layout-creative" id="section-started">
+			<div class="section started" id="section-started">
 
 				<!-- background -->
-				<div class="video-bg" style="background-image: url(images/started_image_p.jpg);">
+				<div class="video-bg jarallax" style="background-image: url(images/started_image_p.jpg);">
 					<div class="video-bg-mask"></div>
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
@@ -123,57 +128,121 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>Erik Opinaldo</strong>, Software Developer Based in Toronto, Canada.
+								Hello, I’m <strong>erik opinaldo</strong>, UX/UI Designer and <br />
+								Front-end Developer Based in San Francisco.
 							</h1>
-							<div class="h-subtitles">
-								<div class="h-subtitle typing-subtitle">
-									<p>I code cool <strong>websites</strong></p>
-									<p>I develop <strong>mobile apps</strong></p>
-									<p>I love <strong>wordpress</strong></p>
-								</div>
-								<span class="typed-subtitle"></span>
+							<div class="h-subtitle typing-subtitle">
+								<p>I code cool <strong>websites</strong></p>
+								<p>I develop <strong>mobile apps</strong></p>
+								<p>I love <strong>wordpress</strong></p>
 							</div>
+							<span class="typed-subtitle"></span>
 						</div>
 					</div>
 				</div>
 
+				<!-- mosue button -->
+				<a href="#" class="mouse_btn" style="display: none;"><span class="icon fas fa-chevron-down"></span></a>
+
+			</div>
+
+			<!-- Section About -->
+			<div class="section about" id="section-about">
+
+				<!-- title -->
+				<div class="title">
+					<div class="title_inner">About</div>
+				</div>
+
+				<div class="content content-box">
+
+					<!-- image -->
+					<div class="image">
+						<img src="images/man2.jpg" alt="" />
+					</div>
+
+					<!-- desc -->
+					<div class="desc">
+						<p>Hello! I’m Daniel Curry. Web designer from USA, California, San Francisco. I have rich
+							experience in web site design and building, also I am good at wordpress. I love to talk with
+							you about our unique.</p>
+						<div class="info-list">
+							<ul>
+								<li><strong>Age:</strong> 24</li>
+								<li><strong>Residence:</strong> USA</li>
+								<li><strong>Freelance:</strong> Available</li>
+								<li><strong>Address:</strong> San Francisco</li>
+								<li><strong>Phone:</strong> +1 256 254 84 56</li>
+								<li><strong>E-mail:</strong> erika@gmail.com</li>
+							</ul>
+						</div>
+						<div class="bts">
+							<a href="#" class="btn hover-animated">
+								<span class="circle"></span>
+								<span class="lnk">Download CV</span>
+							</a>
+						</div>
+					</div>
+
+					<div class="clear"></div>
+				</div>
+			</div>
+
+			<!-- Section Knowladge Skills -->
+			<div class="section skills" id="section-skills-know">
+				<div class="content">
+
+					<!-- title -->
+					<div class="title">
+						<div class="title_inner">Skills</div>
+					</div>
+
+					<!-- skills -->
+					<div class="skills list content-box">
+						<ul>
+							<li>
+								<div class="name">Website hosting</div>
+							</li>
+							<li>
+								<div class="name">iOS and android apps</div>
+							</li>
+							<li>
+								<div class="name">Create logo design</div>
+							</li>
+							<li>
+								<div class="name">Design for print</div>
+							</li>
+							<li>
+								<div class="name">Modern and mobile-ready</div>
+							</li>
+							<li>
+								<div class="name">Advertising services include</div>
+							</li>
+							<li>
+								<div class="name">Graphics and animations</div>
+							</li>
+							<li>
+								<div class="name">Search engine marketing</div>
+							</li>
+						</ul>
+					</div>
+
+				</div>
 			</div>
 
 			<!-- Works -->
 			<div class="section works" id="section-portfolio">
 				<div class="content">
-				
-					<!-- portfolio filter -->
-					<div class="filter-menu content-box">
-						<div class="filters">
-							<div class="btn-group">
-								<label data-text="All" class="glitch-effect"><input type="radio" name="fl_radio" value=".box-item" />All</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Video"><input type="radio" name="fl_radio" value=".f-video" />Video</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Music"><input type="radio" name="fl_radio" value=".f-music" />Music</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Links"><input type="radio" name="fl_radio" value=".f-links" />Links</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Image"><input type="radio" name="fl_radio" value=".f-image" />Image</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Gallery"><input type="radio" name="fl_radio" value=".f-gallery" />Gallery</label>
-							</div>
-							<div class="btn-group">
-								<label data-text="Content"><input type="radio" name="fl_radio" value=".f-content" />Content</label>
-							</div>
-						</div>
+
+					<!-- title -->
+					<div class="title">
+						<div class="title_inner">Portfolio</div>
 					</div>
-					
+
 					<!-- portfolio items -->
 					<div class="box-items portfolio-items">
 
-						<div class="box-item f-gallery"> <!-- add class "animate-to-page" if need animated transition to page and delete target="_blank" -->
+						<div class="box-item f-gallery">
 							<div class="image">
 								<a href="#gallery-1" class="has-popup-gallery hover-animated">
 									<img src="images/work1.jpg" class="wp-post-image" alt="" />
@@ -194,11 +263,12 @@
 									<a href="images/work2.jpg"></a>
 									<a href="images/work3.jpg"></a>
 									<a href="images/work4.jpg"></a>
-								</div>	
+								</div>
 							</div>
 						</div>
 
 						<div class="box-item f-links">
+							<!-- add class "animate-to-page" if need animated transition to page and delete target="_blank" -->
 							<div class="image">
 								<a href="https://google.com/" class="has-popup-link hover-animated" target="_blank">
 									<img src="images/work3.jpg" class="wp-post-image" alt="" />
@@ -213,7 +283,7 @@
 											</span>
 										</span>
 									</span>
-								</a>	
+								</a>
 							</div>
 						</div>
 
@@ -276,7 +346,8 @@
 
 						<div class="box-item f-music">
 							<div class="image">
-								<a href="https://w.soundcloud.com/player/?visual=true&#038;url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F221650664&#038;show_artwork=true" class="has-popup-music hover-animated">
+								<a href="https://w.soundcloud.com/player/?visual=true&#038;url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F221650664&#038;show_artwork=true"
+									class="has-popup-music hover-animated">
 									<img src="images/work6.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
@@ -342,16 +413,26 @@
 										<div class="category">Content</div>
 										<h4>Hand holding pyramid painting</h4>
 										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after anything not necessary — nor for fashionable color nor the shape, nor for style. Think about the content that you want to invest in a created object, and only then will form. The thing is your spirit. A spirit unlike forms hard copy.
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
 										</p>
 										<ul>
 											<li>Now there is more fashion. There is no so-called trends.</li>
-											<li>Now chase after anything not necessary — nor for fashionable color nor the shape, nor for style.</li>
-											<li>Think about the content that you want to invest in a created object, and only then will form.</li>
+											<li>Now chase after anything not necessary — nor for fashionable color nor
+												the shape, nor for style.</li>
+											<li>Think about the content that you want to invest in a created object, and
+												only then will form.</li>
 											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
 										</ul>
 										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after anything not necessary — nor for fashionable color nor the shape, nor for style. Think about the content that you want to invest in a created object, and only then will form. The thing is your spirit. A spirit unlike forms hard copy.
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
 										</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
@@ -366,10 +447,110 @@
 
 					<div class="clear"></div>
 				</div>
-			</div>	
+			</div>
+
+			<!-- Section Contacts Info -->
+			<div class="section contacts" id="section-contacts">
+				<div class="content">
+
+					<!-- title -->
+					<div class="title">
+						<div class="title_inner">Contacts</div>
+					</div>
+
+					<!-- contacts items -->
+					<div class="service-items">
+
+						<div class="service-col">
+							<div class="service-item content-box">
+								<div class="icon"><span class="fas fa-phone"></span></div>
+								<div class="name">Phone</div>
+								<div class="text">+ (231) 456 67 89</div>
+							</div>
+						</div>
+
+						<div class="service-col">
+							<div class="service-item content-box">
+								<div class="icon"><span class="fas fa-envelope"></span></div>
+								<div class="name">Email</div>
+								<div class="text"><a href="mailto:steve-pearson@gmail.com">steve-pearson@gmail.com</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="service-col">
+							<div class="service-item content-box">
+								<div class="icon"><span class="fas fa-map-marker-alt"></span></div>
+								<div class="name">Address</div>
+								<div class="text">2621 W Pico Blvd, Los Angeles</div>
+							</div>
+						</div>
+
+						<div class="service-col">
+							<div class="service-item content-box">
+								<div class="icon"><span class="fas fa-user-tie"></span></div>
+								<div class="name">Freelance Available</div>
+								<div class="text">I am available for Freelance hire</div>
+							</div>
+						</div>
+
+					</div>
+
+					<div class="clear"></div>
+				</div>
+			</div>
+
+			<!-- Section Contacts Form -->
+			<div class="section contacts" id="section-contacts-form">
+				<div class="content">
+
+					<!-- title -->
+					<div class="title">
+						<div class="title_inner">Hire Me</div>
+					</div>
+
+					<!-- form -->
+					<div class="contact_form content-box">
+						<form id="cform" method="post">
+							<div class="group-val">
+								<input type="text" name="name" placeholder="Name" />
+							</div>
+							<div class="group-val">
+								<input type="email" name="email" placeholder="Email" />
+							</div>
+							<div class="group-val ct-gr">
+								<textarea name="message" placeholder="Message"></textarea>
+							</div>
+							<div class="group-bts">
+								<button type="submit" class="btn hover-animated">
+									<span class="circle"></span>
+									<span class="lnk">Send Message</span>
+								</button>
+							</div>
+						</form>
+						<div class="alert-success">
+							<p>Thanks, your message is sent successfully.</p>
+						</div>
+					</div>
+
+				</div>
+				<div class="clear"></div>
+			</div>
+
+			<!-- Section Started -->
+			<div class="section started section-title" id="section-map">
+
+				<!-- background -->
+				<div class="video-bg">
+					<div class="map" id="map"></div>
+					<div class="video-bg-mask"></div>
+					<div class="video-bg-texture" id="grained_container"></div>
+				</div>
+
+			</div>
 
 		</div>
-		
+
 		<!-- Footer -->
 		<footer class="footer">
 			<div class="copy">
@@ -378,13 +559,13 @@
 			<div class="soc-box">
 				<div class="follow-label">Follow Me</div>
 				<div class="soc">
-					<a target="_blank" href="https://www.pinterest.com/">
+					<a target="_blank" href="https://www.linkedin.com/in/erikopinaldo/">
 						<span class="icon fab fa-linkedin"></span>
 					</a>
-					<a target="_blank" href="https://www.instagram.com/">
+					<a target="_blank" href="https://github.com/erikopinaldo">
 						<span class="icon fab fa-github"></span>
 					</a>
-					<a target="_blank" href="https://dribbble.com/">
+					<a target="_blank" href="https://twitter.com/erikopinaldo">
 						<span class="icon fab fa-twitter"></span>
 					</a>
 				</div>
@@ -392,15 +573,6 @@
 			<div class="clear"></div>
 		</footer>
 
-		<!-- Lines -->
-		<!-- <div class="lines">
-			<div class="line-col"></div>
-			<div class="line-col"></div>
-			<div class="line-col"></div>
-			<div class="line-col"></div>
-			<div class="line-col"></div>
-		</div> -->
-		
 	</div>
 
 	<!-- Scripts -->
@@ -416,7 +588,13 @@
 	<script src="js/isotope.pkgd.js"></script>
 	<script src="js/swiper.js"></script>
 	<script src="js/grained.js"></script>
+
+	<!-- Google map api -->
+	<script type="text/javascript"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDz2w7HUaWudHwd7AWQpCL48Qs050WOn9s"></script>
+
 	<script src="js/scripts.js"></script>
 
 </body>
+
 </html>
