updated initial intro

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -128,8 +128,7 @@
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>erik opinaldo</strong>, UX/UI Designer and <br />
-								Front-end Developer Based in San Francisco.
+								Hello, I’m <strong>erik opinaldo</strong>, Full-Stack Developer Based in Toronto.
 							</h1>
 							<div class="h-subtitle typing-subtitle">
 								<p>I code cool <strong>websites</strong></p>
