--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -231,149 +231,57 @@
 					<!-- portfolio items -->
 					<div class="box-items portfolio-items">
 
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="#gallery-1" class="has-popup-gallery hover-animated">
-									<img src="images/work1.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Shot in Iceland</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-1" class="mfp-hide">
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
-									<a href="images/work4.jpg"></a>
-								</div>
-							</div>
-						</div>
 
-						<div class="box-item f-links">
-							<!-- add class "animate-to-page" if need animated transition to page and delete target="_blank" -->
+						<div class="box-item f-content">
 							<div class="image">
-								<a href="https://google.com/" class="has-popup-link hover-animated" target="_blank">
-									<img src="images/work3.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-link"></span>
-												<span class="desc">
-													<span class="category">Links</span>
-													<span class="name">Nike Red</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<div class="box-item f-video">
-							<div class="image">
-								<a href="https://youtu.be/S4L8T2kFFck" class="has-popup-video hover-animated">
-									<img src="images/work2.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-video"></span>
-												<span class="desc">
-													<span class="category">Video</span>
-													<span class="name">Fertility of Some Plants</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<div class="box-item f-image">
-							<div class="image">
-								<a href="images/work4.jpg" class="has-popup-image hover-animated">
-									<img src="images/work4.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-image"></span>
-												<span class="desc">
-													<span class="category">Image</span>
-													<span class="name">Inspiration in Cap Haitian</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<div class="box-item f-image">
-							<div class="image">
-								<a href="images/work7.jpg" class="has-popup-image hover-animated">
-									<img src="images/work7.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-image"></span>
-												<span class="desc">
-													<span class="category">Image</span>
-													<span class="name">Water and Shore</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-							</div>
-						</div>
-
-						<div class="box-item f-music">
-							<div class="image">
-								<a href="https://w.soundcloud.com/player/?visual=true&#038;url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F221650664&#038;show_artwork=true"
-									class="has-popup-music hover-animated">
+								<a href="#popup-1" class="has-popup-media hover-animated">
 									<img src="images/work6.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
-												<span class="icon fas fa-music"></span>
+												<span class="icon fas fa-plus"></span>
 												<span class="desc">
-													<span class="category">Music</span>
-													<span class="name">Dark Bike</span>
+													<span class="category">Content</span>
+													<span class="name">Curved Ceiling Ribs</span>
 												</span>
 											</span>
 										</span>
 									</span>
 								</a>
 							</div>
-						</div>
-
-						<div class="box-item f-gallery">
-							<div class="image">
-								<a href="#gallery-2" class="has-popup-gallery hover-animated">
-									<img src="images/work5.jpg" class="wp-post-image" alt="" />
-									<span class="info circle">
-										<span class="centrize full-width">
-											<span class="vertical-center">
-												<span class="icon fas fa-images"></span>
-												<span class="desc">
-													<span class="category">Gallery</span>
-													<span class="name">Undulating Space</span>
-												</span>
-											</span>
-										</span>
-									</span>
-								</a>
-								<div id="gallery-2" class="mfp-hide">
-									<a href="images/work5.jpg"></a>
-									<a href="images/work1.jpg"></a>
-									<a href="images/work2.jpg"></a>
-									<a href="images/work3.jpg"></a>
+							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image" style="background-image: url(images/work8.jpg);"></div>
+									<div class="desc single-post-text">
+										<div class="category">Content</div>
+										<h4>Hand holding pyramid painting</h4>
+										<p>
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
+										</p>
+										<ul>
+											<li>Now there is more fashion. There is no so-called trends.</li>
+											<li>Now chase after anything not necessary — nor for fashionable color nor
+												the shape, nor for style.</li>
+											<li>Think about the content that you want to invest in a created object, and
+												only then will form.</li>
+											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
+										</ul>
+										<p>
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
+										</p>
+										<a href="works_single_1.html" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Project</span>
+										</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -381,7 +289,61 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-1" class="has-popup-media hover-animated">
-									<img src="images/work8.jpg" class="wp-post-image" alt="" />
+									<img src="images/work6.jpg" class="wp-post-image" alt="" />
+									<span class="info circle">
+										<span class="centrize full-width">
+											<span class="vertical-center">
+												<span class="icon fas fa-plus"></span>
+												<span class="desc">
+													<span class="category">Content</span>
+													<span class="name">Curved Ceiling Ribs</span>
+												</span>
+											</span>
+										</span>
+									</span>
+								</a>
+							</div>
+							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+								<div class="content">
+									<div class="image" style="background-image: url(images/work8.jpg);"></div>
+									<div class="desc single-post-text">
+										<div class="category">Content</div>
+										<h4>Hand holding pyramid painting</h4>
+										<p>
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
+										</p>
+										<ul>
+											<li>Now there is more fashion. There is no so-called trends.</li>
+											<li>Now chase after anything not necessary — nor for fashionable color nor
+												the shape, nor for style.</li>
+											<li>Think about the content that you want to invest in a created object, and
+												only then will form.</li>
+											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
+										</ul>
+										<p>
+											Now there is more fashion. There is no so-called trends. Now chase after
+											anything not necessary — nor for fashionable color nor the shape, nor for
+											style. Think about the content that you want to invest in a created object,
+											and only then will form. The thing is your spirit. A spirit unlike forms
+											hard copy.
+										</p>
+										<a href="works_single_1.html" class="btn hover-animated">
+											<span class="circle"></span>
+											<span class="lnk">View Project</span>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="box-item f-content">
+							<div class="image">
+								<a href="#popup-1" class="has-popup-media hover-animated">
+									<img src="images/work6.jpg" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
