--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -235,14 +235,14 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-1" class="has-popup-media hover-animated">
-									<img src="images/work6.jpg" class="wp-post-image" alt="" />
+									<img src="images/works_keyfigurator.gif" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
 													<span class="category">Content</span>
-													<span class="name">Curved Ceiling Ribs</span>
+													<span class="name">Keyfigurator</span>
 												</span>
 											</span>
 										</span>
@@ -251,7 +251,7 @@
 							</div>
 							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/work8.jpg);"></div>
+									<div class="image" style="background-image: url(images/works_keyfigurator.gif);"></div>
 									<div class="desc single-post-text">
 										<div class="category">Content</div>
 										<h4>Hand holding pyramid painting</h4>
