--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -254,28 +254,13 @@
 									<div class="image" style="background-image: url(images/works_keyfigurator.gif);"></div>
 									<div class="desc single-post-text">
 										<div class="category">Content</div>
-										<h4>Hand holding pyramid painting</h4>
+										<h4>Keyfigurator</h4>
 										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
-										</p>
-										<ul>
-											<li>Now there is more fashion. There is no so-called trends.</li>
-											<li>Now chase after anything not necessary — nor for fashionable color nor
-												the shape, nor for style.</li>
-											<li>Think about the content that you want to invest in a created object, and
-												only then will form.</li>
-											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
-										</ul>
-										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
+											I enjoy collecting mechanical keyboards. When it comes to the outward appearance of these keyboards, I have to choose a
+											keyboard case color and the keycap colors/design. To make it easier to visualize what these color combinations might
+											look like before I commit to buying them, I set out to create this visualizer tool. This website features a 2D keyboard
+											that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
+											color).
 										</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
