--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -262,7 +262,7 @@
 											that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
 											color).
 										</p>
-										<a href="works_single_1.html" class="btn hover-animated">
+										<a href="https://keyfigurator.fly.dev/" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
