--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -327,27 +327,27 @@
 
 						<div class="box-item f-content">
 							<div class="image">
-								<a href="#popup-1" class="has-popup-media hover-animated">
-									<img src="images/work6.jpg" class="wp-post-image" alt="" />
+								<a href="#popup-3" class="has-popup-media hover-animated">
+									<img src="images/works_clickanywhere.png" class="wp-post-image" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
 												<span class="icon fas fa-plus"></span>
 												<span class="desc">
 													<span class="category">Content</span>
-													<span class="name">Curved Ceiling Ribs</span>
+													<span class="name">Clickanywhere</span>
 												</span>
 											</span>
 										</span>
 									</span>
 								</a>
 							</div>
-							<div id="popup-1" class="popup-box mfp-fade mfp-hide">
+							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
 									<div class="image" style="background-image: url(images/work8.jpg);"></div>
 									<div class="desc single-post-text">
 										<div class="category">Content</div>
-										<h4>Hand holding pyramid painting</h4>
+										<h4>Clickanywhere</h4>
 										<p>
 											Now there is more fashion. There is no so-called trends. Now chase after
 											anything not necessary — nor for fashionable color nor the shape, nor for
