--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -349,26 +349,8 @@
 										<div class="category">Content</div>
 										<h4>Clickanywhere</h4>
 										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
-										</p>
-										<ul>
-											<li>Now there is more fashion. There is no so-called trends.</li>
-											<li>Now chase after anything not necessary — nor for fashionable color nor
-												the shape, nor for style.</li>
-											<li>Think about the content that you want to invest in a created object, and
-												only then will form.</li>
-											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
-										</ul>
-										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
+											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest
+											number of clicks possible.
 										</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
