added clickanywhere URL

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -344,7 +344,7 @@
 							</div>
 							<div id="popup-3" class="popup-box mfp-fade mfp-hide">
 								<div class="content">
-									<div class="image" style="background-image: url(images/work8.jpg);"></div>
+									<div class="image" style="background-image: url(images/works_clickanywhere.png);"></div>
 									<div class="desc single-post-text">
 										<div class="category">Content</div>
 										<h4>Clickanywhere</h4>
