--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -352,7 +352,7 @@
 											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest
 											number of clicks possible.
 										</p>
-										<a href="works_single_1.html" class="btn hover-animated">
+										<a href="https://clickanywhere.netlify.app/" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
