--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -295,26 +295,9 @@
 										<div class="category">Content</div>
 										<h4>Spongebob Meme Slack Bot</h4>
 										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
-										</p>
-										<ul>
-											<li>Now there is more fashion. There is no so-called trends.</li>
-											<li>Now chase after anything not necessary — nor for fashionable color nor
-												the shape, nor for style.</li>
-											<li>Think about the content that you want to invest in a created object, and
-												only then will form.</li>
-											<li>The thing is your spirit. A spirit unlike forms hard copy.</li>
-										</ul>
-										<p>
-											Now there is more fashion. There is no so-called trends. Now chase after
-											anything not necessary — nor for fashionable color nor the shape, nor for
-											style. Think about the content that you want to invest in a created object,
-											and only then will form. The thing is your spirit. A spirit unlike forms
-											hard copy.
+											This is a bot that can be installed onto Slack workspaces. It is activated with a slash command in the message input
+											field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out
+											converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
 										</p>
 										<a href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
