--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -274,7 +274,7 @@
 						<div class="box-item f-content">
 							<div class="image">
 								<a href="#popup-2" class="has-popup-media hover-animated">
-									<img src="images/works_spongebot.gif" class="wp-post-image" alt="" />
+									<img src="images/works_spongebot.gif" alt="" />
 									<span class="info circle">
 										<span class="centrize full-width">
 											<span class="vertical-center">
