pointed contact nav bar item to the contact form section

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -101,7 +101,7 @@
 									<a href="#section-portfolio">Works</a>
 								</li>
 								<li class="menu-item">
-									<a href="#section-contacts">Contact</a>
+									<a href="#section-contacts-form">Contact</a>
 								</li>
 							</ul>
 						</div>
