make works URLs open in new tab

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -262,7 +262,7 @@
 											that you can modify. You can change the keyboard case and keycap color (you can also change the background canvas
 											color).
 										</p>
-										<a href="https://keyfigurator.fly.dev/" class="btn hover-animated">
+										<a target="_blank" href="https://keyfigurator.fly.dev/" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
@@ -299,7 +299,7 @@
 											field and your choice of input text. The bot then takes your input text (e.g. "This is some text") and sends out
 											converted text (e.g. "tHiS iS SOMe TExT"). <a href="https://knowyourmeme.com/memes/mocking-spongebob">Here</a> is some cultural/historical context for this meme.
 										</p>
-										<a href="works_single_1.html" class="btn hover-animated">
+										<a target="_blank" href="works_single_1.html" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
@@ -335,7 +335,7 @@
 											It's like Minesweeper, but not really. Click around the page to find the "right spot", and try to do it with the lowest
 											number of clicks possible.
 										</p>
-										<a href="https://clickanywhere.netlify.app/" class="btn hover-animated">
+										<a target="_blank" href="https://clickanywhere.netlify.app/" class="btn hover-animated">
 											<span class="circle"></span>
 											<span class="lnk">View Project</span>
 										</a>
