--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -157,7 +157,7 @@
 
 					<!-- image -->
 					<div class="image">
-						<img src="images/man2.jpg" alt="" />
+						<img src="images/erik-profile.jpg" alt="" />
 					</div>
 
 					<!-- desc -->
