added temp personal blurb

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -162,7 +162,7 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! I’m Daniel Curry. Web designer from USA, California, San Francisco. I have rich
+						<p>Hello! Erik Opinaldo, a full-stack developer from Toronto, Canada. I have rich
 							experience in web site design and building, also I am good at wordpress. I love to talk with
 							you about our unique.</p>
 						<div class="bts">
