temp personal blurb

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -162,9 +162,7 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! Erik Opinaldo, a full-stack developer from Toronto, Canada. I have rich
-							experience in web site design and building, also I am good at wordpress. I love to talk with
-							you about our unique.</p>
+						<p>Hello! Erik Opinaldo, a full-stack developer from Toronto, Canada. INSERT BLURB HERE.</p>
 						<div class="bts">
 							<a href="#" class="btn hover-animated">
 								<span class="circle"></span>
