update page description and title to erikopinaldo

--- a/template/index_creative.html
+++ b/template/index_creative.html
@@ -6,12 +6,12 @@
 	<!-- Meta -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="CV & Resume Template" />
+	<meta name="description" content="erikopinaldo" />
 	<meta name="keywords" content="vcard, resposnive, resume, personal, card, cv, cvio, portfolio" />
 	<meta name="author" content="beshleyua" />
 
 	<!-- Title -->
-	<title>Cvio - Resume/CV Template</title>
+	<title>erikopinaldo</title>
 
 	<!-- Fonts -->
 	<link
